# osso

./: .gitignore  README.md  pyproject.toml
.planning/: PROJECT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
models/: layers.py
osso/: config.py
osso/engine/: engine.py  generate.py
osso/kvcache/: __init__.py  base.py  naive.py
osso/layers/: attention.py  utils.py
osso/models/: llama.py
osso/utils/: hf.py
scripts/: plot_benchmark.py  plot_benchmark_v2.py  test_load.py
tests/: benchmark.py  benchmark_perplexity.py  qwen3.5:4b_baseline.py
