[project]
name = "osso"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "openai>=2.26.0",
    "pillow>=12.1.1",
    "nvidia-ml-py>=12.0.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
    "wandb>=0.25.0",
    "weave>=0.52.30",
]
