[project]
name = "osso"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "annotated-types>=0.7.0",
    "cachetools>=7.0.5",
    "diskcache>=5.6.3",
    "einops>=0.8.2",
    "gql>=4.0.0",
    "huggingface-hub>=1.7.2",
    "jsonschema>=4.26.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "nvidia-ml-py>=13.595.45",
    "openai>=2.29.0",
    "packaging>=26.0",
    "pandas>=3.0.1",
    "transformers>=5.3.0",
    "weave>=0.52.35",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["osso*"]
